more tests, bonus feature and ui improvement

--- a/DS_Project/.vscode/settings.json
+++ b/DS_Project/.vscode/settings.json
@@ -53,6 +53,10 @@
         "shared_mutex": "cpp",
         "sstream": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "csignal": "cpp",
+        "iomanip": "cpp",
+        "mutex": "cpp",
+        "thread": "cpp"
     }
 }
